[package]
name = "sky-lantern-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
reqwest = "0.12.4"
hex = "0.4.3"
sha1 = "0.11.0-pre.3"
sha2 = "0.11.0-pre.3"
md-5 = "0.10.6"
futures = "0.3.30"
anyhow = "1.0.83"
